objects/Company__c.object
<CustomObject>
    <description>user companyWhen company information is null in input form. create a company with just user name and assign user role of company admin.</description>
    <fields>
        <fullName>Company_Logo__c</fullName>
        <label>Company Logo</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PG_Authorization_CC_Last_four_Digit__c</fullName>
        <description>This is the last four digits of customer(event admin) credit card towards eventdex ticket fee</description>
        <label>PG Authorization CC Last four Digit</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG_Authorization_Card_Type__c</fullName>
        <label>PG Authorization Card Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG_Authorization_Key__c</fullName>
        <description>This is the payment gateway authorization to charge the customer for any ticket sales using direct payments for our eventdex fee</description>
        <label>PG Authorization Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG_Credit_Card_Overwrite__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this flag is true that means we are collecting our eventdex fee in cheque otherwise in credit card</description>
        <label>PG Credit Card Overwrite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Website_URL__c</fullName>
        <label>Website URL</label>
        <type>Url</type>
    </fields>
    <label>BLN Company</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Company_Logo__c</columns>
        <columns>Website_URL__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BLN Company</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>